--- a/be/.env
+++ b/be/.env
@@ -1,4 +1,4 @@
-MONGODB_URI = "mongodb://127.0.0.1/"
+MONGODB_URI = "mongodb://localhost:27017/HAONHIEN_Studio"
 # MONGODB_URI = "mongodb+srv://quanghao040102:rhXKS6xTSII7Nsdr@wdp301.aql5m.mongodb.net/WDP301?retryWrites=true&w=majority&appName=Wdp301"
 HOST_NAME = "localhost"
 PORT = 9999
@@ -13,9 +13,3 @@ CLOUDINARY_SECRET=aJx5ikcs-7e1kiwab6a70cbU14k
 CLOUDINARY_CLOUD_NAME= 'dntzdrmc8'
 CLOUDINARY_API_KEY= '841276666911794'
 CLOUDINARY_API_SECRET= 'W8ysHr4qwohLoiaA_om83Ud3LaE'
-
-VNPAY_TMN_CODE=LXR6PMXA
-VNPAY_HASH_SECRET=PZUYFHWHIGLFOAWOMPJKYXRIPNAWELAX
-VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL = http://localhost:9999/transaction/vnpay/return
-VNPAY_IPN_URL=http://localhost:9999/payment/vnpay/ipn
